small changes to website

--- a/project2.html
+++ b/project2.html
@@ -7,34 +7,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="project2-layout">
+    <!-- Icons for Blender and Unreal Engine -->
+    <div class="fixed-icons">
+        <img src="assets/project2/blender_icon.png" alt="Blender Icon" class="icon">
+        <img src="assets/project2/unrealengine_icon.png" alt="Unreal Engine Icon" class="icon">
+    </div>
+
     <button class="back-button" onclick="window.location.href='index.html'">Back to Landing Page</button>
 
-    <h1 class="project2-layout">3D Animation Portfolio</h1>
+    <h1>3D Animation</h1>
 
     <div class="gallery">
-        <!-- Videos in reverse order -->
-        <div class="video-container project2-layout">
+        <!-- Add your video containers here -->
+        <div class="video-container">
             <video controls>
                 <source src="assets/project2/space.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
-
-        <div class="video-container project2-layout">
+        <div class="video-container">
             <video controls>
                 <source src="assets/project2/oasis.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
-
-        <div class="video-container project2-layout">
+        <div class="video-container">
             <video controls>
                 <source src="assets/project2/oasis_timelapse.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
-
-        <div class="video-container project2-layout">
+        <div class="video-container">
             <video controls>
                 <source src="assets/project2/castle.mp4" type="video/mp4">
                 Your browser does not support the video tag.
