--- a/project3.html
+++ b/project3.html
@@ -13,7 +13,7 @@
 
     <button class="back-button" onclick="window.location.href='index.html'">Back to Landing Page</button>
 
-    <h1 class="project3-layout">Ache Esports Portfolio</h1>
+    <h1 class="project3-layout">Ache Esports</h1>
 
     <div class="gallery">
         <!-- GIF First -->
