adding white text to animation page

--- a/project2.html
+++ b/project2.html
@@ -15,7 +15,7 @@
 
     <button class="back-button" onclick="window.location.href='index.html'">Back to Landing Page</button>
 
-    <h1>3D Animation</h1>
+    <h1 class="project2-layout">3D Animation</h1>
 
     <div class="gallery">
         <!-- Add your video containers here -->
