--- a/index.html
+++ b/index.html
@@ -22,9 +22,15 @@
         </div>
         <div class="thumbnail" onclick="window.location.href='project4.html'">
             <img src="assets/project4/RUAS_thumbnail.PNG" alt="2018 Engineering Project">
-            <p class="thumbnail-title">2017 Engineering Project</p>
+            <p class="thumbnail-title">2018 Engineering Project</p>
         </div>
     </div>
+
+    <!-- Video element for click animation with transparency -->
+    <video id="clickAnimation" style="display: none; position: absolute; pointer-events: none;" width="150" height="150">
+        <source src="assets/animations/click.webm" type="video/webm">
+        Your browser does not support the video tag.
+    </video>
 
     <script src="script.js"></script>
 </body>
